@@ -1,12 +1,14 @@
 package helpers.filters;
 
+import classes.Starter;
 import model.Product;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class ProductFilter {
-
+    private ProductFilter(){
+        Starter.logger.info("Hi from product filter.");
+    }
     public static List<Product> filterProductsBy(String field, String fieldValue, List<Product> products) {
         if (fieldValue.equals("")) return products;
         switch (field) {
@@ -24,27 +26,28 @@ public class ProductFilter {
     }
 
     private static List<Product> filterByCategory(List<Product> products, String category) {
+        if(category.equals("All Categories"))return products;
         return products.stream()
                 .filter(product -> category.equals(product.getProductCategory()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static List<Product> searchByProductID(List<Product> products, String productID) {
         return products.stream()
                 .filter(product -> product.getProductID() == Integer.parseInt(productID))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static List<Product> searchByProductName(List<Product> products, String productName) {
         return products.stream()
                 .filter(product -> product.getProductName().toLowerCase().contains(productName.toLowerCase()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static List<Product> searchByProductDescription(List<Product> products, String description) {
         return products.stream()
                 .filter(product -> product.getLongDescription().toLowerCase().contains(description.toLowerCase()) ||
                         product.getShortDescription().toLowerCase().contains(description.toLowerCase()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
